@@ -41,5 +41,6 @@ extern char *quote_args(char **);
 #endif /* MAKE_KPSE_DLL */
 
 extern KPSEDLL BOOL win32_get_long_filename (char *, char *, int);
+extern KPSEDLL void texlive_gs_init(void);
 
 #endif
